aggiungi paginazione risultati

--- a/asd/persone/templates/persone/persona/list.html
+++ b/asd/persone/templates/persone/persona/list.html
@@ -13,4 +13,5 @@ Published {{ persona.datanascita }}
 </p>
 {{ persona.note|truncatewords:30|linebreaks }}
 {% endfor %}
+{% include "pagination.html" with page=persone %}
 {% endblock %}
