sposta i file di template e definisci il compressore risorse

--- a/asd/templates/persona/detail.html
+++ b/asd/templates/persona/detail.html
@@ -1,4 +1,4 @@
-{% extends "persone/base.html" %}
+{% extends "_base.html" %}
 {% block title %}{{ persona.cognome }} {{ persona.nome }}{% endblock %}
 {% block content %}
 <h1>{{ persona.cognome }} {{ persona.nome }}</h1>
