--- a/asd/templates/persona/list.html
+++ b/asd/templates/persona/list.html
@@ -1,4 +1,4 @@
-{% extends "persone/base.html" %}
+{% extends "_base.html" %}
 {% block title %}My Blog{% endblock %}
 {% block content %}
 <h1>My Blog</h1>
