--- a/asd/templates/persona/new.html
+++ b/asd/templates/persona/new.html
@@ -1,4 +1,4 @@
-{% extends "_base.html" %}
+{% extends "base.html" %}
 {% block title %}Iscrizione{% endblock %}
 {% block content %}
 <h1>Iscriviti</h1>
