--- a/asd/templates/base.html
+++ b/asd/templates/base.html
@@ -59,18 +59,11 @@
     <!-- End of new HTML -->    
 
     <div class="container mx-auto mt-4 max-w-screen-lg">
-        
-
-        <div class="grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-8">
-          <div class="rounded-lg bg-gray-200"></div>
-          <div class="rounded-lg bg-gray-200 lg:col-span-2">
-            <h2 class="mb-6 text-2xl text-indigo-800 font-bold">{% block contenttitle %}ASD Dragonfly Lecce{% endblock contenttitle %}</h2>
+      <h2 class="mb-6 text-2xl text-indigo-800 font-bold">{% block contenttitle %}Web App{% endblock contenttitle %}</h2>
             
-            {% block content %}
-            {% endblock content %}
-    
-          </div>
-        </div>        
+      {% block content %}
+      {% endblock content %}
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
