--- a/asd/templates/account/dashboard.html
+++ b/asd/templates/account/dashboard.html
@@ -1,6 +1,37 @@
 {% extends "base.html" %}
 {% block title %}Dashboard{% endblock %}
+{% block contenttitle %}Dashboard{% endblock %}
 {% block content %}
-<h1>Dashboard</h1>
-<p>Welcome to your dashboard.</p>
+<div class="flow-root rounded-lg border border-gray-100 py-3 shadow-sm">
+    <dl class="-my-3 divide-y divide-gray-100 text-sm">
+      <div class="grid grid-cols-1 gap-1 p-3 even:bg-gray-50 sm:grid-cols-3 sm:gap-4">
+        <dt class="font-medium text-gray-900">Nome e cognome</dt>
+        <dd class="text-gray-700 sm:col-span-2">Mr</dd>
+      </div>
+  
+      <div class="grid grid-cols-1 gap-1 p-3 even:bg-gray-50 sm:grid-cols-3 sm:gap-4">
+        <dt class="font-medium text-gray-900">Data e luogo di nascita</dt>
+        <dd class="text-gray-700 sm:col-span-2">John Frusciante</dd>
+      </div>
+  
+      <div class="grid grid-cols-1 gap-1 p-3 even:bg-gray-50 sm:grid-cols-3 sm:gap-4">
+        <dt class="font-medium text-gray-900">Occupation</dt>
+        <dd class="text-gray-700 sm:col-span-2">Guitarist</dd>
+      </div>
+  
+      <div class="grid grid-cols-1 gap-1 p-3 even:bg-gray-50 sm:grid-cols-3 sm:gap-4">
+        <dt class="font-medium text-gray-900">Salary</dt>
+        <dd class="text-gray-700 sm:col-span-2">$1,000,000+</dd>
+      </div>
+  
+      <div class="grid grid-cols-1 gap-1 p-3 even:bg-gray-50 sm:grid-cols-3 sm:gap-4">
+        <dt class="font-medium text-gray-900">Bio</dt>
+        <dd class="text-gray-700 sm:col-span-2">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et facilis debitis explicabo
+          doloremque impedit nesciunt dolorem facere, dolor quasi veritatis quia fugit aperiam
+          aspernatur neque molestiae labore aliquam soluta architecto?
+        </dd>
+      </div>
+    </dl>
+  </div>
 {% endblock %}
