--- a/asd/templates/base.html
+++ b/asd/templates/base.html
@@ -59,13 +59,25 @@
     <!-- End of new HTML -->    
 
     <div class="container mx-auto mt-4 max-w-screen-lg">
-      <h2 class="mb-6 text-2xl text-indigo-800 font-bold">{% block contenttitle %}Web App{% endblock contenttitle %}</h2>
+      <div class="p-4 md:p-0">
+
+        {% if messages %}
+        <ul class="messages">
+        {% for message in messages %}
+        <li class="{{ message.tags }}">
+        {{ message|safe }}
+        <a href="#" class="close">x</a>
+        </li>
+        {% endfor %}
+        </ul>
+        {% endif %}
+                
+        <h2 class="mb-6 text-2xl text-indigo-800 font-bold">{% block contenttitle %}Web App{% endblock contenttitle %}</h2>
             
-      {% block content %}
-      {% endblock content %}
-
+        {% block content %}
+        {% endblock content %}
+      </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
     <script src="{% static 'bundle.js' %}"></script>
 </body>
